--- a/pom.xml
+++ b/pom.xml
@@ -6,5 +6,13 @@
   <packaging>pom</packaging>
   <modules>
   	<module>pom.scripts</module>
+  	<module>pom.domain</module>
   </modules>
+  <dependencies>
+  <dependency>
+  		<groupId>org.projectlombok</groupId>
+  		<artifactId>lombok</artifactId>
+  		<version>1.16.20</version>
+  	</dependency>
+  </dependencies>
 </project>
